k8s/web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: todo-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo-app
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - image: 940482447333.dkr.ecr.us-west-2.amazonaws.com/todo-app
          imagePullPolicy: Always
          name: todo-app
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: todo-app
